[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myprofiler"
version = "0.0.1"
description = "A minimal profiler for calculating memory usage and time"
readme = "README.md"
authors = [
    { name = "AmirBahador Bahadori", email = "amirbahador.pv@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["profiler", "memory usage", "python performance"]

requires-python = ">=3.10"

[project.optional-dependencies]
build = ["build", "twine", "bumpver"]


[project.urls]
repository = "https://github.com/amirbahador-hub/myprofiler"
#documentation = ""


[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"myprofiler/__init__.py" = [
    'gitm_version = "{version}"',
]
